code clean up and added some comments

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "c91fda14-24cb-4b02-e605-166a3b0536a9",
+        "outputId": "80d08dfc-47e6-4350-b966-cb5a8c21dab4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "c6d0bc8f-f862-4737-c122-10e2a60947f7",
+        "outputId": "3015f353-5892-41f2-ba67-70db58a6df9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "6dba348e-f8d0-427d-a869-be11c8b79289",
+        "outputId": "560a6ab0-2ad3-4f8d-bd6d-9281fbb29674",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -278,9 +278,8 @@
         "  dweight = (1 / batch_size) * np.dot(x, np.transpose(2 * (activation-y) * activation * (1-activation)))\n",
         "  dbias = (1 / batch_size) * np.sum( 2 * (activation-y) * activation * (1-activation))\n",
         "  gradient = {\"dweight\":dweight,\"dbias\":dbias }\n",
-        "  loss_value = np.squeeze(loss_value)\n",
         "  \n",
-        "  return gradient,loss_value\n",
+        "  return gradient\n",
         "\n",
         "\n",
         "#input to the sigmoid function (our algorithm’s prediction using Logistic regression  e.g. z= wx + b)\n",
@@ -295,21 +294,19 @@
         "#Implementing mini-batch stochastic gradient descent for back propogation\n",
         "\n",
         "def minibatchsgd(weight,bias,train_images,train_labels,epochs,learn_rate):\n",
-        "  loss_values = []\n",
         "  for i in range(epochs):\n",
         "    for batch in get_mini_batches(np.transpose(train_images), np.transpose(train_labels), batch_size):\n",
         "      train_images_batch,train_labels_batch = batch\n",
-        "      gradient,loss_value = mean_square_loss_function(weight,bias,np.transpose(train_images_batch),np.transpose(train_labels_batch))\n",
+        "      gradient = mean_square_loss_function(weight,bias,np.transpose(train_images_batch),np.transpose(train_labels_batch))\n",
         "      gradient_weight =gradient[\"dweight\"]\n",
         "      gradient_bias = gradient[\"dbias\"]\n",
         "      weight = weight - learn_rate*gradient_weight\n",
         "      bias = bias - learn_rate*gradient_bias\n",
-        "    loss_values.append(loss_value)\n",
         "    \n",
         "  initials = {\"weight\":weight,\"bias\":bias}\n",
         "  gradients = {\"dweight\":gradient_weight ,\"dbias\":gradient_bias}\n",
         "        \n",
-        "  return initials,gradients,loss_values\n",
+        "  return initials,gradients\n",
         "\n",
         "\n",
         "def get_mini_batches(train_images,train_labels,batch_size):\n",
@@ -351,16 +348,16 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
+        "outputId": "24699566-6046-418b-be22-b952d0db9f35",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
-        },
-        "outputId": "a284727e-7bd8-43cf-e5b6-e342ec64a4b1"
+          "height": 457
+        }
       },
       "cell_type": "code",
       "source": [
         "# network model for 10 classifiers\n",
-        "  \n",
+        "  test_acc_list = list()\n",
         "  for digit_classifier in range(0,10):\n",
         "    #binary classification for one classifier_digit from 0 to 9\n",
         "    modified_train_label = np.array(train_labels_original);\n",
@@ -371,7 +368,7 @@
         "    \n",
         "    #training the network model to obtain different weight and bias\n",
         "    weight, bias = initialize_zeros(train_images.shape[0])\n",
-        "    initials,gradients,loss_values = minibatchsgd(weight, bias, train_images, modified_train_label, epochs, learn_rate)\n",
+        "    initials,gradients = minibatchsgd(weight, bias, train_images, modified_train_label, epochs, learn_rate)\n",
         "    weight= initials[\"weight\"]\n",
         "    bias=initials[\"bias\"]\n",
         "    \n",
@@ -383,10 +380,11 @@
         "    predict_train_labels_original[:,[digit_classifier]] = train_labels_prediction.T\n",
         "    predict_test_labels_original[:,[digit_classifier]] = test_labels_prediction.T\n",
         "    \n",
-        "    # corresponding 0 to 9 train and test classifier accuracy\n",
+        "    # corresponding to digits 0 to 9, train and test classifier accuracy\n",
         "    print(\"Digit \" + str(digit_classifier) +\" train accuracy : {} %\".format(100 - np.mean(np.abs(train_labels_prediction - modified_train_label)) * 100))\n",
-        "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : {} %\".format(100 - np.mean(np.abs(test_labels_prediction - modified_test_label)) * 100))\n",
-        "\n",
+        "    test_acc = 100 - np.mean(np.abs(test_labels_prediction - modified_test_label)) * 100\n",
+        "    test_acc_list.append(test_acc)\n",
+        "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : \" + str(test_acc))\n",
         "     \n",
         "  train_labels_original = keras.utils.to_categorical(train_labels_original, 10)\n",
         "  test_labels_original = keras.utils.to_categorical(test_labels_original, 10)\n",
@@ -395,7 +393,8 @@
         "    \n",
         "  # overall test and train classifier accuracy of the network\n",
         "  print(\"Overall train accuracy: {} %\".format(100 - np.mean(np.abs(predict_train_labels_original - train_labels_original)) * 100))\n",
-        "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n"
+        "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n",
+        "  print('Classifier with Strongest output is:', np.argmax(test_acc_list))\n"
       ],
       "execution_count": 9,
       "outputs": [
@@ -403,29 +402,30 @@
           "output_type": "stream",
           "text": [
             "Digit 0 train accuracy : 99.205 %\n",
-            "Digit 0 test accuracy : 99.29 %\n",
+            "Digit 0 test accuracy : 99.29\n",
             "Digit 1 train accuracy : 99.19 %\n",
-            "Digit 1 test accuracy : 99.46 %\n",
+            "Digit 1 test accuracy : 99.46\n",
             "Digit 2 train accuracy : 98.135 %\n",
-            "Digit 2 test accuracy : 98.22 %\n",
+            "Digit 2 test accuracy : 98.22\n",
             "Digit 3 train accuracy : 97.76333333333334 %\n",
-            "Digit 3 test accuracy : 98.06 %\n",
+            "Digit 3 test accuracy : 98.06\n",
             "Digit 4 train accuracy : 98.395 %\n",
-            "Digit 4 test accuracy : 98.25 %\n",
+            "Digit 4 test accuracy : 98.25\n",
             "Digit 5 train accuracy : 97.56666666666666 %\n",
-            "Digit 5 test accuracy : 97.74 %\n",
+            "Digit 5 test accuracy : 97.74\n",
             "Digit 6 train accuracy : 98.84166666666667 %\n",
-            "Digit 6 test accuracy : 98.72 %\n",
+            "Digit 6 test accuracy : 98.72\n",
             "Digit 7 train accuracy : 98.53333333333333 %\n",
-            "Digit 7 test accuracy : 98.51 %\n",
+            "Digit 7 test accuracy : 98.51\n",
             "Digit 8 train accuracy : 96.16833333333334 %\n",
-            "Digit 8 test accuracy : 96.34 %\n",
+            "Digit 8 test accuracy : 96.34\n",
             "Digit 9 train accuracy : 96.74333333333334 %\n",
-            "Digit 9 test accuracy : 96.66 %\n",
+            "Digit 9 test accuracy : 96.66\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
             "Overall train accuracy: 98.0541666969657 %\n",
-            "Overall test accuracy: 98.1249999254942 %\n"
+            "Overall test accuracy: 98.1249999254942 %\n",
+            "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
         }
