--- a/ML_Problem_2.ipynb
+++ b/ML_Problem_2.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "85a7774a-b1ec-49b9-dc5a-218438e832ee",
+        "outputId": "44a1d783-a51d-4580-c33b-15b3a3ce2d88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "00932735-1d3f-44a3-b1b9-303f405ad04d",
+        "outputId": "e579beb0-f68e-4e13-d551-0670727efde4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "be0ca451-e629-4c98-9827-ee7c61458e84",
+        "outputId": "ced7b598-d977-4c83-f5b7-950d26979126",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -175,11 +175,11 @@
       "metadata": {
         "id": "ftLmk4m649nN",
         "colab_type": "code",
+        "outputId": "3ba08a82-40f2-467d-e8ab-2de7e9e45023",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "fb62c613-d5bf-451b-cbaa-b52a80baaef9"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -286,9 +286,8 @@
         "  dweight = (1 / batch_size) * np.dot(x, (activation - y).T)\n",
         "  dbias = (1 / batch_size) * np.sum(activation - y)\n",
         "  gradient = {\"dweight\":dweight,\"dbias\":dbias }\n",
-        "  loss_value = np.squeeze(loss_value)\n",
         "  \n",
-        "  return gradient,loss_value\n",
+        "  return gradient\n",
         "\n",
         "\n",
         "#input to the sigmoid function (our algorithm’s prediction using Logistic regression  e.g. z= wx + b)\n",
@@ -303,21 +302,19 @@
         "# Implementing mini-batch stochastic gradient descent for back propogation\n",
         "\n",
         "def minibatchsgd(weight,bias,train_images,train_labels,epochs,learn_rate):\n",
-        "  loss_values = []\n",
         "  for i in range(epochs):\n",
         "    for batch in get_mini_batches(np.transpose(train_images), np.transpose(train_labels), batch_size):\n",
         "      train_images_batch,train_labels_batch = batch\n",
-        "      gradient,loss_value = binary_entropy_loss_function(weight,bias,np.transpose(train_images_batch),np.transpose(train_labels_batch))\n",
+        "      gradient = binary_entropy_loss_function(weight,bias,np.transpose(train_images_batch),np.transpose(train_labels_batch))\n",
         "      gradient_weight =gradient[\"dweight\"]\n",
         "      gradient_bias = gradient[\"dbias\"]\n",
         "      weight = weight - learn_rate*gradient_weight\n",
         "      bias = bias - learn_rate*gradient_bias\n",
-        "    loss_values.append(loss_value)\n",
         "    \n",
         "  initials = {\"weight\":weight,\"bias\":bias}\n",
         "  gradients = {\"dweight\":gradient_weight ,\"dbias\":gradient_bias}\n",
         "        \n",
-        "  return initials,gradients,loss_values\n",
+        "  return initials,gradients\n",
         "\n",
         "\n",
         "def get_mini_batches(train_images,train_labels,batch_size):\n",
@@ -360,16 +357,16 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "f904b50b-1d66-4775-e93a-52fd27c96573",
+        "outputId": "a2f4450f-294d-4f7c-d54b-e9678dbbcb56",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
+          "height": 457
         }
       },
       "cell_type": "code",
       "source": [
         "# network model for 10 classifiers\n",
-        "  \n",
+        "  test_acc_list = list()\n",
         "  for digit_classifier in range(0,10):\n",
         "    #binary classification for one classifier_digit from 0 to 9\n",
         "    modified_train_label = np.array(train_labels_original);\n",
@@ -381,7 +378,7 @@
         "    #training the network model to obtain different weight and bias\n",
         "    train_images.shape[0]\n",
         "    weight, bias = initialize_zeros(train_images.shape[0])\n",
-        "    initials,gradients,loss_values = minibatchsgd(weight, bias, train_images, modified_train_label, epochs, learn_rate)\n",
+        "    initials,gradients = minibatchsgd(weight, bias, train_images, modified_train_label, epochs, learn_rate)\n",
         "    weight= initials[\"weight\"]\n",
         "    bias=initials[\"bias\"]\n",
         "    \n",
@@ -396,7 +393,9 @@
         "    \n",
         "    #corresponding 0 to 9 train and test classifier accuracy\n",
         "    print(\"Digit \" + str(digit_classifier) +\" train accuracy : {} %\".format(100 - np.mean(np.abs(train_labels_prediction - modified_train_label)) * 100))\n",
-        "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : {} %\".format(100 - np.mean(np.abs(test_labels_prediction - modified_test_label)) * 100))\n",
+        "    test_acc = 100 - np.mean(np.abs(test_labels_prediction - modified_test_label)) * 100\n",
+        "    test_acc_list.append(test_acc)\n",
+        "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : \" + str(test_acc))\n",
         "\n",
         "     \n",
         "  train_labels_original = keras.utils.to_categorical(train_labels_original, 10)\n",
@@ -406,7 +405,8 @@
         "    \n",
         "  #overall test and train classifier accuracy of the network\n",
         "  print(\"Overall train accuracy: {} %\".format(100 - np.mean(np.abs(predict_train_labels_original - train_labels_original)) * 100))\n",
-        "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n"
+        "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n",
+        "  print('Classifier with Strongest output is:', np.argmax(test_acc_list))\n"
       ],
       "execution_count": 9,
       "outputs": [
@@ -414,29 +414,30 @@
           "output_type": "stream",
           "text": [
             "Digit 0 train accuracy : 99.26666666666667 %\n",
-            "Digit 0 test accuracy : 99.18 %\n",
+            "Digit 0 test accuracy : 99.18\n",
             "Digit 1 train accuracy : 99.17 %\n",
-            "Digit 1 test accuracy : 99.32 %\n",
+            "Digit 1 test accuracy : 99.32\n",
             "Digit 2 train accuracy : 97.835 %\n",
-            "Digit 2 test accuracy : 97.72 %\n",
+            "Digit 2 test accuracy : 97.72\n",
             "Digit 3 train accuracy : 97.62833333333333 %\n",
-            "Digit 3 test accuracy : 97.85 %\n",
+            "Digit 3 test accuracy : 97.85\n",
             "Digit 4 train accuracy : 98.42166666666667 %\n",
-            "Digit 4 test accuracy : 98.33 %\n",
+            "Digit 4 test accuracy : 98.33\n",
             "Digit 5 train accuracy : 97.44 %\n",
-            "Digit 5 test accuracy : 97.65 %\n",
+            "Digit 5 test accuracy : 97.65\n",
             "Digit 6 train accuracy : 98.80666666666667 %\n",
-            "Digit 6 test accuracy : 98.77 %\n",
+            "Digit 6 test accuracy : 98.77\n",
             "Digit 7 train accuracy : 98.49666666666667 %\n",
-            "Digit 7 test accuracy : 98.51 %\n",
+            "Digit 7 test accuracy : 98.51\n",
             "Digit 8 train accuracy : 95.96333333333334 %\n",
-            "Digit 8 test accuracy : 96.07 %\n",
+            "Digit 8 test accuracy : 96.07\n",
             "Digit 9 train accuracy : 96.43166666666667 %\n",
-            "Digit 9 test accuracy : 96.5 %\n",
+            "Digit 9 test accuracy : 96.5\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
             "Overall train accuracy: 97.94599991291761 %\n",
-            "Overall test accuracy: 97.99000006169081 %\n"
+            "Overall test accuracy: 97.99000006169081 %\n",
+            "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
         }
