updating some changes for loss calculation

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "80d08dfc-47e6-4350-b966-cb5a8c21dab4",
+        "outputId": "0a2c7b74-e821-4ef1-86f4-f8266b168abe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "3015f353-5892-41f2-ba67-70db58a6df9b",
+        "outputId": "5bf0bee0-cded-4ce8-93a1-df243e23935f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "560a6ab0-2ad3-4f8d-bd6d-9281fbb29674",
+        "outputId": "c90fc97c-bdc3-4435-f4aa-5b3894a7f240",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -275,8 +275,8 @@
         "  loss_value = np.mean((y - activation)**2)\n",
         "  \n",
         "  #computing gradient wrt weight and wrt to bias\n",
-        "  dweight = (1 / batch_size) * np.dot(x, np.transpose(2 * (activation-y) * activation * (1-activation)))\n",
-        "  dbias = (1 / batch_size) * np.sum( 2 * (activation-y) * activation * (1-activation))\n",
+        "  dweight = np.dot(x, np.transpose((activation-y) * activation * (1-activation)))\n",
+        "  dbias =  np.sum( (activation-y) * activation * (1-activation))\n",
         "  gradient = {\"dweight\":dweight,\"dbias\":dbias }\n",
         "  \n",
         "  return gradient\n",
@@ -348,7 +348,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "24699566-6046-418b-be22-b952d0db9f35",
+        "outputId": "113022fa-01f8-4962-d395-da6293b24872",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
@@ -401,30 +401,30 @@
         {
           "output_type": "stream",
           "text": [
-            "Digit 0 train accuracy : 99.205 %\n",
-            "Digit 0 test accuracy : 99.29\n",
-            "Digit 1 train accuracy : 99.19 %\n",
-            "Digit 1 test accuracy : 99.46\n",
-            "Digit 2 train accuracy : 98.135 %\n",
-            "Digit 2 test accuracy : 98.22\n",
-            "Digit 3 train accuracy : 97.76333333333334 %\n",
-            "Digit 3 test accuracy : 98.06\n",
-            "Digit 4 train accuracy : 98.395 %\n",
-            "Digit 4 test accuracy : 98.25\n",
-            "Digit 5 train accuracy : 97.56666666666666 %\n",
-            "Digit 5 test accuracy : 97.74\n",
-            "Digit 6 train accuracy : 98.84166666666667 %\n",
-            "Digit 6 test accuracy : 98.72\n",
-            "Digit 7 train accuracy : 98.53333333333333 %\n",
-            "Digit 7 test accuracy : 98.51\n",
-            "Digit 8 train accuracy : 96.16833333333334 %\n",
-            "Digit 8 test accuracy : 96.34\n",
-            "Digit 9 train accuracy : 96.74333333333334 %\n",
-            "Digit 9 test accuracy : 96.66\n",
+            "Digit 0 train accuracy : 99.415 %\n",
+            "Digit 0 test accuracy : 99.28\n",
+            "Digit 1 train accuracy : 99.34666666666666 %\n",
+            "Digit 1 test accuracy : 99.37\n",
+            "Digit 2 train accuracy : 90.07 %\n",
+            "Digit 2 test accuracy : 89.68\n",
+            "Digit 3 train accuracy : 97.85333333333334 %\n",
+            "Digit 3 test accuracy : 98.01\n",
+            "Digit 4 train accuracy : 98.63666666666667 %\n",
+            "Digit 4 test accuracy : 98.36\n",
+            "Digit 5 train accuracy : 97.41166666666666 %\n",
+            "Digit 5 test accuracy : 97.64\n",
+            "Digit 6 train accuracy : 98.97166666666666 %\n",
+            "Digit 6 test accuracy : 98.77\n",
+            "Digit 7 train accuracy : 98.64833333333334 %\n",
+            "Digit 7 test accuracy : 98.55\n",
+            "Digit 8 train accuracy : 90.24833333333333 %\n",
+            "Digit 8 test accuracy : 90.26\n",
+            "Digit 9 train accuracy : 96.21 %\n",
+            "Digit 9 test accuracy : 96.05\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
-            "Overall train accuracy: 98.0541666969657 %\n",
-            "Overall test accuracy: 98.1249999254942 %\n",
+            "Overall train accuracy: 96.68116681277752 %\n",
+            "Overall test accuracy: 96.59699983894825 %\n",
             "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
