--- a/ML_Problem_2.ipynb
+++ b/ML_Problem_2.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "44a1d783-a51d-4580-c33b-15b3a3ce2d88",
+        "outputId": "c91af2dc-a0d2-490b-cfaa-065b6e112fd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "e579beb0-f68e-4e13-d551-0670727efde4",
+        "outputId": "6a32992c-51ac-46ad-b01e-9037c9936dfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "ced7b598-d977-4c83-f5b7-950d26979126",
+        "outputId": "59f3b209-3a10-400c-e124-3db2e4cd32f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "ftLmk4m649nN",
         "colab_type": "code",
-        "outputId": "3ba08a82-40f2-467d-e8ab-2de7e9e45023",
+        "outputId": "e705af17-c424-44ea-e854-c63f8b806e7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -280,11 +280,10 @@
         "def binary_entropy_loss_function(weight,bias,x,y):\n",
         "  z = np.dot(np.transpose(weight),x) + (bias)\n",
         "  activation = sigmoid(z)\n",
-        "  loss_value = (-1/batch_size) * np.sum(y * np.log(activation) + (1 - y) * (np.log(1 - activation)))\n",
         "  \n",
         "  #computing gradient wrt weight and wrt to bias\n",
-        "  dweight = (1 / batch_size) * np.dot(x, (activation - y).T)\n",
-        "  dbias = (1 / batch_size) * np.sum(activation - y)\n",
+        "  dweight = np.dot(x, (activation - y).T)\n",
+        "  dbias = np.sum(activation - y)\n",
         "  gradient = {\"dweight\":dweight,\"dbias\":dbias }\n",
         "  \n",
         "  return gradient\n",
@@ -294,9 +293,6 @@
         "\n",
         "def sigmoid(z): \n",
         "  return 1.0/(1.0+np.exp(-z))\n",
-        "\n",
-        "def sigmoid_derivative(z):\n",
-        "  return sigmoid(z)*(1-sigmoid(z))\n",
         "\n",
         "  \n",
         "# Implementing mini-batch stochastic gradient descent for back propogation\n",
@@ -357,7 +353,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "a2f4450f-294d-4f7c-d54b-e9678dbbcb56",
+        "outputId": "e7d9912b-57c8-41ac-ef84-8669e18573f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
@@ -413,31 +409,31 @@
         {
           "output_type": "stream",
           "text": [
-            "Digit 0 train accuracy : 99.26666666666667 %\n",
-            "Digit 0 test accuracy : 99.18\n",
-            "Digit 1 train accuracy : 99.17 %\n",
-            "Digit 1 test accuracy : 99.32\n",
-            "Digit 2 train accuracy : 97.835 %\n",
-            "Digit 2 test accuracy : 97.72\n",
-            "Digit 3 train accuracy : 97.62833333333333 %\n",
-            "Digit 3 test accuracy : 97.85\n",
-            "Digit 4 train accuracy : 98.42166666666667 %\n",
-            "Digit 4 test accuracy : 98.33\n",
-            "Digit 5 train accuracy : 97.44 %\n",
-            "Digit 5 test accuracy : 97.65\n",
-            "Digit 6 train accuracy : 98.80666666666667 %\n",
-            "Digit 6 test accuracy : 98.77\n",
-            "Digit 7 train accuracy : 98.49666666666667 %\n",
-            "Digit 7 test accuracy : 98.51\n",
-            "Digit 8 train accuracy : 95.96333333333334 %\n",
-            "Digit 8 test accuracy : 96.07\n",
-            "Digit 9 train accuracy : 96.43166666666667 %\n",
-            "Digit 9 test accuracy : 96.5\n",
+            "Digit 0 train accuracy : 98.99333333333334 %\n",
+            "Digit 0 test accuracy : 98.96\n",
+            "Digit 1 train accuracy : 98.91666666666667 %\n",
+            "Digit 1 test accuracy : 98.94\n",
+            "Digit 2 train accuracy : 96.75666666666666 %\n",
+            "Digit 2 test accuracy : 96.17\n",
+            "Digit 3 train accuracy : 93.64166666666667 %\n",
+            "Digit 3 test accuracy : 93.13\n",
+            "Digit 4 train accuracy : 97.895 %\n",
+            "Digit 4 test accuracy : 97.86\n",
+            "Digit 5 train accuracy : 96.345 %\n",
+            "Digit 5 test accuracy : 96.49\n",
+            "Digit 6 train accuracy : 98.45166666666667 %\n",
+            "Digit 6 test accuracy : 98.27\n",
+            "Digit 7 train accuracy : 98.28166666666667 %\n",
+            "Digit 7 test accuracy : 98.25\n",
+            "Digit 8 train accuracy : 94.48833333333333 %\n",
+            "Digit 8 test accuracy : 94.11\n",
+            "Digit 9 train accuracy : 94.14333333333333 %\n",
+            "Digit 9 test accuracy : 94.25\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
-            "Overall train accuracy: 97.94599991291761 %\n",
-            "Overall test accuracy: 97.99000006169081 %\n",
-            "Classifier with Strongest output is: 1\n"
+            "Overall train accuracy: 96.79133333265781 %\n",
+            "Overall test accuracy: 96.64300009608269 %\n",
+            "Classifier with Strongest output is: 0\n"
           ],
           "name": "stdout"
         }
