--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -6,7 +6,8 @@
       "name": "ML_Problem_1.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mahera02/machine_learning/blob/master/ML_Problem_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "id": "nmhTVRGsVBh_",
