printing the loss value at each epoch

--- a/ML_Problem_3.ipynb
+++ b/ML_Problem_3.ipynb
@@ -39,11 +39,7 @@
       "metadata": {
         "id": "JKNPsLcH8Pq6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "fdfebac5-3383-405a-ebb1-13ab1fc0eafe"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -55,16 +51,8 @@
         "\n",
         "(train_images_original, train_labels_original), (test_images_original, test_labels_original) = mnist.load_data()"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -80,11 +68,11 @@
       "metadata": {
         "id": "eX-Nbh48OFyv",
         "colab_type": "code",
+        "outputId": "ba6966bb-4f00-4815-c0e5-2db1b1ff06d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "ed84d466-a0a5-47df-e82b-6a2613633226"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -107,7 +95,7 @@
         "print(train_labels_original.shape)\n",
         "print(test_labels_original.shape)"
       ],
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,11 +197,11 @@
       "metadata": {
         "id": "-qLoZEeta8Fq",
         "colab_type": "code",
+        "outputId": "aa80ce66-1498-4981-bcf3-999c94a949a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "9d84b4b4-4320-4a7c-d0f1-1dafa921f3b1"
+          "height": 404
+        }
       },
       "cell_type": "code",
       "source": [
@@ -245,6 +233,7 @@
         "\n",
         "        weight = weight - learn_rate * dweight\n",
         "        bias = bias - learn_rate * dbias\n",
+        "     print(\"Loss at Epoch \", i, \" \", loss)\n",
         "    \n",
         "  result1 = forward_propagation(weight,bias,train_images.T)\n",
         "  \n",
@@ -262,13 +251,33 @@
         "  print(\"Training accuracy : {} %\".format(100 - np.mean(np.abs(train_labels_prediction - train_labels.T)) * 100))\n",
         "  print(\"Testing accuracy  : {} %\".format(100 - np.mean(np.abs(test_labels_prediction - test_labels.T)) * 100))"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train accuracy : 98.02100006490946 %\n",
-            "test accuracy  : 98.14800005406141 %\n"
+            "Loss at Epoch  0   0.08678900701856772\n",
+            "Loss at Epoch  1   0.058708707066656304\n",
+            "Loss at Epoch  2   0.046442500190412586\n",
+            "Loss at Epoch  3   0.03937971471463951\n",
+            "Loss at Epoch  4   0.034745240513284904\n",
+            "Loss at Epoch  5   0.03145774978675635\n",
+            "Loss at Epoch  6   0.028999937675183513\n",
+            "Loss at Epoch  7   0.027090882961609664\n",
+            "Loss at Epoch  8   0.02556411905224698\n",
+            "Loss at Epoch  9   0.024314455500147224\n",
+            "Loss at Epoch  10   0.023272051932326752\n",
+            "Loss at Epoch  11   0.022388679118929992\n",
+            "Loss at Epoch  12   0.021629947759072114\n",
+            "Loss at Epoch  13   0.020970675528919864\n",
+            "Loss at Epoch  14   0.020392002675689015\n",
+            "Loss at Epoch  15   0.019879529682623374\n",
+            "Loss at Epoch  16   0.01942207701286918\n",
+            "Loss at Epoch  17   0.019010836802237984\n",
+            "Loss at Epoch  18   0.01863877900447326\n",
+            "Loss at Epoch  19   0.018300227100461662\n",
+            "Training accuracy : 98.02166670560837 %\n",
+            "Testing accuracy  : 98.13400004059076 %\n"
           ],
           "name": "stdout"
         }
